--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "stripe.css";
 
+
+
+#profile_country_code{
+    border: 1px solid #d1d5da;
+    border-radius: 6px;
+    height: 36px;
+    margin-top: 8px;
+    padding-left: 4px;
+    font-size: 14px;
+}
 
 .property-items-wrapper:hover{
     .swiper-button-prev{
