--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -53,7 +53,13 @@
             <button  data-header-target="openUserMenu" type="button" class="relative flex rounded-full bg-white focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
               <span class="absolute -inset-1.5"></span>
               <span class="sr-only">Open user menu</span>
-              <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+              <% if user_signed_in? && current_user.profile.picture.present? %>
+                <%= image_tag current_user.profile.picture,class:"h-6 w-6 rounded-full object-cover" %>
+              <% else %>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0 0 12 15.75a7.488 7.488 0 0 0-5.982 2.975m11.963 0a9 9 0 1 0-11.963 0m11.963 0A8.966 8.966 0 0 1 12 21a8.966 8.966 0 0 1-5.982-2.275M15 9.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                </svg>
+              <% end %>
             </button>
           </div>
 
@@ -67,7 +73,8 @@
               From: "transform opacity-100 scale-100"
               To: "transform opacity-0 scale-95"
           -->
-          <div data-header-target="dropdown" data-transition-enter="transition ease-out duration-100"
+          <div data-header-target="dropdown"
+               data-transition-enter="transition ease-out duration-100"
                data-transition-enter-start="transform opacity-0 scale-95"
                data-transition-enter-end="transform opacity-100 scale-100"
                data-transition-leave="transition ease-in duration-75"
@@ -75,7 +82,8 @@
                data-transition-leave-end="transform opacity-0 scale-95" class="hidden absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
             <!-- Active: "bg-gray-100", Not Active: "" -->
             <% if user_signed_in? %>
-              <%= link_to 'Whislist',"",class:"block px-4 py-2 text-sm text-gray-700",role:"menuitem",tabindex:"-1",id:"user-menu-item-2" %>
+              <%= link_to 'Profile',edit_profile_path,class:"block px-4 py-2 text-sm text-gray-700",role:"menuitem",tabindex:"-1",id:"user-menu-item-2" %>
+              <%= link_to 'Whislist',wishlist_index_path,class:"block px-4 py-2 text-sm text-gray-700",role:"menuitem",tabindex:"-1",id:"user-menu-item-2" %>
               <%= button_to 'Log Out', destroy_user_session_path,method: :delete,class:"block px-4 py-2 text-sm text-gray-700",role:"menuitem",tabindex:"-1",id:"user-menu-item-2" %>
             <% else %>
               <%= link_to 'Log In', user_session_path,class:"js-login block px-4 py-2 text-sm text-gray-700",role:"menuitem",tabindex:"-1",id:"user-menu-item-2"  %>
