--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
       />
-
+<!--    Flat picker-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <%= stripe_javascript_tag %>
   </head>
 
   <body>
@@ -24,7 +26,7 @@
     <p class="alert"><%= alert %></p>
     <% if controller_name == "registrations"  || controller_name == "sessions" || controller_name == "passwords"%>
     <%else %>
-    <%= render 'layouts/header' %>
+    <%= render 'layouts/header'%>
     <% end %>
     <%= yield %>
   </body>
