--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Airbnb | Holiday rentals, cabins, beach houses & more</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <%= favicon_link_tag 'airbnb.ico' %>
@@ -18,12 +20,14 @@
 <!--    Flat picker-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <%= stripe_javascript_tag %>
+    <% if controller_name == "booking_payments" && action_name == "create" %>
+      <%= stripe_javascript_tag %>
+    <%end %>
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%= render "shared/notice" %>
+    <%= render "shared/alert" %>
     <% if controller_name == "registrations"  || controller_name == "sessions" || controller_name == "passwords"%>
     <%else %>
     <%= render 'layouts/header'%>
