--- a/app/views/owner/reservations/index.html.erb
+++ b/app/views/owner/reservations/index.html.erb
@@ -1,6 +1,6 @@
 <div class="mx-auto max-w-7xl lg:flex lg:gap-x-16 lg:px-8">
 
-  <%= render "shared/profile_sidebar" %>
+  <%= render "shared/owner_sidebar" %>
   <main class="my-8 lg:flex-auto">
     <div>
       <h2 class="text-2xl font-semibold leading-7 text-gray-900">Reservations</h2>
@@ -12,20 +12,7 @@
 
         <div class="flex justify-between">
           <%= render "properties/mini_property_item",property:reservation.property %>
-
-          <% if reservation.review.present? %>
-            <span class="inline-flex items-center pointer-events-none block text-sm text-black mt-2">
-              Your rating:
-              <svg class="mx-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 12px; width: 12px; fill: currentcolor;">
-                <path fill-rule="evenodd" d="m15.1 1.58-4.13 8.88-9.86 1.27a1 1 0 0 0-.54 1.74l7.3 6.57-1.97 9.85a1 1 0 0 0 1.48 1.06l8.62-5 8.63 5a1 1 0 0 0 1.48-1.06l-1.97-9.85 7.3-6.57a1 1 0 0 0-.55-1.73l-9.86-1.28-4.12-8.88a1 1 0 0 0-1.82 0z"></path>
-              </svg>
-              <%= reservation.review.overall_rating.round(2) %>
-            </span>
-          <% else %>
-            <%= link_to 'Add Review', new_reservation_review_path(reservation), class:"flex h-10 items-center justify-center rounded-md border border-transparent bg-primary px-8 py-1 text-base font-medium text-white hover:bg-primary-dark focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2" %>
-          <% end %>
         </div>
-
 
         <div class="relative py-6">
           <div class="absolute inset-0 flex items-center" aria-hidden="true">
@@ -34,10 +21,14 @@
         </div>
 
         <div class="mt-4">
-          <h3 class="text-xl font-medium text-gray-900 mb-3">Trip Details</h3>
+          <h3 class="text-xl font-medium text-gray-900 mb-3">Booking Details</h3>
+          <div class="flex justify-between">
+            <p>Booked By</p>
+            <p class="font-medium"><%= reservation.user.profile.name %> (<%= reservation.user.email %>)</p>
+          </div>
           <div class="flex justify-between">
             <p>Dates</p>
-            <p>(<%= reservation.check_in %>)-(<%= reservation.check_out %>)</p>
+            <p class="font-medium">(<%= reservation.check_in %>)-(<%= reservation.check_out %>)</p>
           </div>
 
         </div>
