--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -9,18 +9,7 @@
         <h2 class="sr-only">Product information</h2>
 
         <div class="flex justify-between">
-          <div class="flex">
-            <%= image_tag @reservation.property.images[0], class:"w-20 h-20 object-cover rounded-md"%>
-            <div class="ml-3 flex flex-col text-black font-medium text-sm">
-              <div><%= @reservation.property.name %> - <%= @reservation.property.city %>, <%= country_name(@reservation.property.country_code) %></div>
-              <span class="inline-flex items-center pointer-events-none block text-sm font-light text-black">
-              <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 12px; width: 12px; fill: currentcolor;">
-                <path fill-rule="evenodd" d="m15.1 1.58-4.13 8.88-9.86 1.27a1 1 0 0 0-.54 1.74l7.3 6.57-1.97 9.85a1 1 0 0 0 1.48 1.06l8.62-5 8.63 5a1 1 0 0 0 1.48-1.06l-1.97-9.85 7.3-6.57a1 1 0 0 0-.55-1.73l-9.86-1.28-4.12-8.88a1 1 0 0 0-1.82 0z"></path>
-              </svg>
-                <%= @reservation.property.average_overall_rating.round(2) %> (<%= @reservation.property.reviews_count %> reviews)
-            </span>
-            </div>
-          </div>
+          <%= render "properties/mini_property_item",property:@reservation.property %>
         </div>
           <div class="relative py-6">
             <div class="absolute inset-0 flex items-center" aria-hidden="true">
@@ -28,19 +17,19 @@
             </div>
           </div>
          <div class="max-w-96">
-           <%= form_with url: reservation_reviews_path(),method: :post do |f|%>
+           <%= form_with url: reservation_reviews_path do |f|%>
              <div class="flex flex-col py-4">
-               <%= f.label :content %>
-               <%= f.text_area :content,class:"rounded-md",rows:"3"%>
+               <%= f.label :content, class:'block text-sm font-medium leading-6 text-gray-900' %>
+               <%= f.text_area :content, class:'block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6' %>
              </div>
 
              <div data-controller="rating">
-               <%= render "rating_item",f:f,category_rating:"cleanliness_rating" %>
-               <%= render "rating_item",f:f,category_rating:"accuracy_rating" %>
-               <%= render "rating_item",f:f,category_rating:"checkin_rating" %>
-               <%= render "rating_item",f:f,category_rating:"communication_rating" %>
-               <%= render "rating_item",f:f,category_rating:"location_rating" %>
-               <%= render "rating_item",f:f,category_rating:"value_rating" %>
+               <%= render :partial => 'reviews/rating_item', :locals => {:f => f, category_rating: "cleanliness_rating"} %>
+               <%= render :partial => 'reviews/rating_item', :locals => {:f => f, category_rating: "accuracy_rating"} %>
+               <%= render :partial => 'reviews/rating_item', :locals => {:f => f, category_rating: "checkin_rating"} %>
+               <%= render :partial => 'reviews/rating_item', :locals => {:f => f, category_rating: "communication_rating"} %>
+               <%= render :partial => 'reviews/rating_item', :locals => {:f => f, category_rating: "location_rating"} %>
+               <%= render :partial => 'reviews/rating_item', :locals => {:f => f, category_rating: "value_rating"} %>
              </div>
 
 
